--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-body {
+.body {
     background-color: #FBFCFC;
     padding: 40px;
   }
@@ -19,3 +19,16 @@ body {
     color: rgb(15, 0, 26);
     font-size: 
   }
+  .blink-text{
+      color: #000;
+      font-weight: bold;
+      animation: blinkingText 10s infinite;
+    }
+    @keyframes blinkingText{
+      0%		{ color: #66e86c;}
+      25%		{ color: #3079e8d6;}
+      35%		{ color: #9b5bf4d6;}
+      50%		{ color: #ef0a1a;}
+      75%		{ color: #ed6c6c;}
+      100%	{ color: #d5b204;}
+    }
