--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,13 +22,13 @@
   .blink-text{
       color: #000;
       font-weight: bold;
-      animation: blinkingText 10s infinite;
+      animation: blinkingText 18s infinite;
     }
     @keyframes blinkingText{
       0%		{ color: #66e86c;}
       25%		{ color: #3079e8d6;}
       35%		{ color: #9b5bf4d6;}
-      50%		{ color: #ef0a1a;}
-      75%		{ color: #ed6c6c;}
-      100%	{ color: #d5b204;}
+      50%		{ color: hsl(319, 92%, 71%);}
+      75%		{ color: #edcb6c;}
+      100%	{ color: #66e86c;}
     }
