--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,7 @@
       animation: blinkingText 18s infinite;
     }
     @keyframes blinkingText{
-      0%		{ color: #038535;}
+      0%		{ color: #0a6c5a;}
       25%		{ color: #3079e8d6;}
       35%		{ color: #9b5bf4d6;}
       50%		{ color: hsl(319, 92%, 71%);}
