--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,5 +26,5 @@
       35%		{ color: #9b5bf4d6;}
       50%		{ color: hsl(319, 92%, 71%);}
       75%		{ color: #edcb6c;}
-      100%	{ color: #66e86c;}
+      100%	{ color: #00a408;}
     }
