Pulled down mode toggle button

--- a/stylesheet-dark.css
+++ b/stylesheet-dark.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #FBFCFC; padding:40px;
+  background-color: #071010; padding:40px;
 }
 @media (prefers-color-scheme: dark) {
 }
