--- a/stylesheet-light.css
+++ b/stylesheet-light.css
@@ -1,35 +1,59 @@
 body {
-  background-color: #FBFCFC; padding:40px;
+  background-color: #fbfcfc;
+  padding: 40px;
 }
 @media (prefers-color-scheme: dark) {
 }
 h1 {
-      font-size: 80px;
-      text-align: center;
-      color: #02163ee9;
-      background-size: contain
+  font-size: 80px;
+  text-align: center;
+  color: #02163ee9;
+  background-size: contain;
+}
+h2 {
+  font-size: 25px;
+}
+h3 {
+  text-align: center;
+  font-size: 100px;
+}
+h4 {
+  color: rgb(15, 0, 26);
+}
+.blink-text {
+  color: #000;
+  font-weight: bold;
+  animation: blinkingText 18s infinite;
+}
+@keyframes blinkingText {
+  0% {
+    color: #015243;
   }
-  h2 {
-    font-size: 25px;
+  25% {
+    color: #3079e8d6;
   }
-  h3 {
-      text-align: center;
-      font-size: 100px;
+  35% {
+    color: #9b5bf4d6;
   }
-  h4 {
-    color: rgb(15, 0, 26);
-    font-size: 
+  50% {
+    color: hsl(319, 92%, 71%);
   }
-  .blink-text{
-      color: #000;
-      font-weight: bold;
-      animation: blinkingText 18s infinite;
-    }
-    @keyframes blinkingText{
-      0%		{ color: #015243;}
-      25%		{ color: #3079e8d6;}
-      35%		{ color: #9b5bf4d6;}
-      50%		{ color: hsl(319, 92%, 71%);}
-      75%		{ color: #edcb6c;}
-      100%	{ color: #00a408;}
-    }
+  75% {
+    color: #edcb6c;
+  }
+  100% {
+    color: #00a408;
+  }
+}
+
+.highlight {
+  font-weight: bold;
+}
+
+#course-data-journalism {
+  color: rgb(96, 4, 142);
+}
+
+#university {
+  color: #003865;
+}
