--- a/stylesheet-light.css
+++ b/stylesheet-light.css
@@ -47,7 +47,7 @@ h4 {
 }
 
 .highlight {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 #course-data-journalism {
@@ -56,4 +56,14 @@ h4 {
 
 #university {
   color: #003865;
+}
+
+#link-reuters {
+  color: #ff8000;
+}
+#link-glance {
+  color: rgb(239, 60, 60);
+}
+#link-ipt {
+  color: rgb(38, 133, 12);
 }
