--- a/stylesheet-light.css
+++ b/stylesheet-light.css
@@ -72,3 +72,14 @@ h4 {
   border-style: solid;
   border-color: black;
 }
+.full-bleed-image {
+  background: url('ofada.jpeg');
+  padding: 25em;
+  background-size: cover;
+  background-position: center center;
+}
+
+.full-bleed-image .image-text {
+  color: white;
+  text-shadow: 0 0 20px black;
+}
