--- a/stylesheet-light.css
+++ b/stylesheet-light.css
@@ -72,3 +72,10 @@ h4 {
   border-style: solid;
   border-color: black;
 }
+
+.full-size-image {
+  background: url('audience-1850119_1920.jpg');
+  background-size: cover;
+  background-position-y: bottom;
+  max-width: 100%
+}
