--- a/new-stylesheet.css
+++ b/new-stylesheet.css
@@ -1,6 +1,65 @@
 body {
-    background-size: 40px 40px;
-    background-image:
-      linear-gradient(to right, rgb(3, 3, 3) 0.5px, transparent 2px),
-      linear-gradient(to bottom, rgb(3, 3, 3) 0.5px, transparent 2px);
-  }
+  background-size: 13px 13px;
+  background-color: #fffafa;
+  background-image: linear-gradient(
+      to right,
+      #e5e7e9 0.8px,
+      transparent 0.001px
+    ),
+    linear-gradient(to bottom, #e5e7e9 0.8px, transparent 0.001px);
+  padding: 90px;
+  font-family: "Space Mono", monospace;
+}
+
+h1 {
+  font-size: 80px;
+  text-align: left;
+  color: #02163ee9;
+  background-size: contain;
+  margin-left: 50px;
+  margin-top: 100px;
+  /* margin:0; */
+  /* vertical-align: middle; */
+}
+
+h4 {
+  font-size: 30px;
+  text-align: left;
+  color: #0d0d0d;
+  background-size: contain;
+  margin-left: 50px;
+  /* margin:0; */
+}
+
+.story-card {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 30%;
+  margin-left: 50px;
+}
+
+.story-card-container {
+  padding: 4px 32px;
+  background-color: rgb(243, 242, 237);
+}
+
+h2 {
+  font-size: 14px;
+  text-align: left;
+  color: #0d0d0d;
+  background-size: contain;
+  /* margin-left: 50px; */
+}
+
+p {
+  font-size: 18px;
+  text-align: left;
+  color: rgba(134, 4, 4, 0.576);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-size: contain;
+}
+
+.cards-wrapper {
+    
+}
