--- a/new-stylesheet.css
+++ b/new-stylesheet.css
@@ -7,8 +7,38 @@ body {
       transparent 0.001px
     ),
     linear-gradient(to bottom, #e5e7e9 0.8px, transparent 0.001px);
-  padding: 90px;
+  padding: 40px 100px 100px 100px;
+  margin: 0;
   font-family: "Space Mono", monospace;
+}
+.blink {
+  color: #000;
+  font-weight: bold;
+  animation: blinkingText 18s infinite;
+}
+@keyframes blinkingText {
+  0% {
+    color: #015243;
+  }
+  25% {
+    color: #3079e8d6;
+  }
+  35% {
+    color: #9b5bf4d6;
+  }
+  50% {
+    color: hsl(319, 92%, 71%);
+  }
+  75% {
+    color: #edcb6c;
+  }
+  100% {
+    color: #00a408;
+  }
+}
+
+.highlight {
+  font-weight: 600;
 }
 
 h1 {
@@ -16,7 +46,6 @@ h1 {
   text-align: left;
   color: #02163ee9;
   background-size: contain;
-  margin-left: 50px;
   margin-top: 100px;
   /* margin:0; */
   /* vertical-align: middle; */
@@ -27,19 +56,17 @@ h4 {
   text-align: left;
   color: #0d0d0d;
   background-size: contain;
-  margin-left: 50px;
   /* margin:0; */
 }
 
 .story-card {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  width: 30%;
-  margin-left: 50px;
+  width: 365px;
 }
 
 .story-card-container {
-  padding: 4px 32px;
+  padding: 4px 42px;
   background-color: rgb(243, 242, 237);
 }
 
@@ -52,14 +79,34 @@ h2 {
 }
 
 p {
-  font-size: 18px;
+  font-size: 14px;
   text-align: left;
-  color: rgba(134, 4, 4, 0.576);
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: rgba(85, 3, 3, 0.576);
   background-size: contain;
 }
 
 .cards-wrapper {
-    
+  display: flex;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+a {
+  text-decoration: none;
+}
+a:hover h2 {
+  color: rgb(10, 104, 34);
+}
+button {
+  background-color: #a0249a;
+  border: none;
+  border-radius: 12px 12px 12px 12px;
+  color: white;
+  padding: 15px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: grab;
+  font-family: "Space Mono", monospace;
 }
