Added social icons

--- a/new-stylesheet.css
+++ b/new-stylesheet.css
@@ -41,6 +41,10 @@ body {
   font-weight: 600;
 }
 
+.right-nav{
+    float:right;
+    padding: 10px 8px;
+}
 h1 {
   font-size: 80px;
   text-align: left;
