--- a/new-stylesheet.css
+++ b/new-stylesheet.css
@@ -1,6 +1,7 @@
 body {
   background-size: 13px 13px;
-  background-color: #fffafa;
+  /* background-color: #fffafa; */
+  background-color: #f5f5f5;
   background-image: linear-gradient(
       to right,
       #e5e7e9 0.8px,
