--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,26 +1,18 @@
 body {
-  background-color: #fbfcfc;
-  padding: 40px;
+  background-size: 13px 13px;
+  /* background-color: #fffafa; */
+  background-color: #f5f5f5;
+  background-image: linear-gradient(
+      to right,
+      #e5e7e9 0.8px,
+      transparent 0.001px
+    ),
+    linear-gradient(to bottom, #e5e7e9 0.8px, transparent 0.001px);
+  padding: 40px 100px 100px 100px;
+  margin: 0;
+  font-family: "Space Mono", monospace;
 }
-@media (prefers-color-scheme: dark) {
-}
-h1 {
-  font-size: 80px;
-  text-align: center;
-  color: #02163ee9;
-  background-size: contain;
-}
-h2 {
-  font-size: 25px;
-}
-h3 {
-  text-align: center;
-  font-size: 100px;
-}
-h4 {
-  color: rgb(15, 0, 26);
-}
-.blink-text {
+.blink {
   color: #000;
   font-weight: bold;
   animation: blinkingText 18s infinite;
@@ -50,32 +42,104 @@ h4 {
   font-weight: 600;
 }
 
-#course-data-journalism {
-  color: rgb(96, 4, 142);
+.right-nav {
+  float: right;
+  padding: 10px 8px;
+}
+h1 {
+  font-size: 80px;
+  text-align: left;
+  color: #02163ee9;
+  background-size: contain;
+  margin-top: 100px;
+  /* margin:0; */
+  /* vertical-align: middle; */
 }
 
-#university {
-  color: #003865;
+h4 {
+  font-size: 30px;
+  text-align: left;
+  color: #0d0d0d;
+  background-size: contain;
+  /* margin:0; */
 }
 
-#link-reuters {
-  color: #ff8000;
-}
-#link-glance {
-  color: rgb(239, 60, 60);
-}
-#link-ipt {
-  color: rgb(38, 133, 12);
-}
-.box {
-  border-radius: 100px;
-  border-style: solid;
-  border-color: black;
+.story-card {
+  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 365px;
 }
 
-.full-size-image {
-  background: url('audience-1850119_1920.jpg');
-  background-size: cover;
-  background-position-y: bottom;
-  max-width: 100%
+.story-card-container {
+  padding: 4px 42px;
+  background-color: rgb(243, 242, 237);
+}
+
+h2 {
+  font-size: 14px;
+  text-align: left;
+  color: #0d0d0d;
+  background-size: contain;
+  /* margin-left: 50px; */
+}
+
+p {
+  font-size: 14px;
+  text-align: left;
+  color: rgba(85, 3, 3, 0.576);
+  background-size: contain;
+}
+
+.cards-wrapper {
+  display: flex;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+a {
+  text-decoration: none;
+}
+a:hover h2 {
+  color: rgb(10, 104, 34);
+}
+button {
+  background-color: #a0249a;
+  border: none;
+  border-radius: 12px 12px 12px 12px;
+  color: white;
+  padding: 15px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: grab;
+  font-family: "Space Mono", monospace;
+}
+
+.aboutme-p-font
+{
+  font-size: 18px; 
+  color: black;">
+}
+a:hover p {
+  color: rgb(10, 104, 34);
+}
+
+.aboutme-div {
+  padding:70px;
+  margin:0;
+}
+
+.resume-headers {
+  font-size: 30px;
+  text-align: left;
+  color: #02163ee9;
+}
+
+.p-playground {
+  font-size: 18px;
+  font-weigh:bold;
+  text-align: left;
+  color:black;
+  background-size: contain;
 }
