--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body {
     ),
     linear-gradient(to bottom, #e5e7e9 0.8px, transparent 0.001px);
   padding: 40px 100px 100px 100px;
-  margin: 0;
+  margin: 0 auto;
   font-family: "Space Mono", monospace;
 }
 .blink {
