--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,6 +46,8 @@ body {
   padding: 10px 8px;
 }
 
+/* All the fonts! */
+
 h1 {
   /* Use for page headers */
   font-size: 80px;
@@ -56,10 +58,33 @@ h1 {
 }
 
 h2 {
-  /* Use for page sub-heads */
+  /* Use for page sub-heads and sticky note titles */
   font-size: 30px;
   text-align: left;
   color: #0d0d0d;
+  background-size: contain;
+}
+
+h3 {
+  /* Use for story card titles */
+  font-size: 18px;
+  text-align: left;
+  color: #0d0d0d;
+  background-size: contain;
+  margin:0;
+}
+
+p {
+  /* Main body text everywhere! */
+  font-size: 18px;
+  color: black;
+}
+
+h4 {
+  /* Use for really small, insignificant text */
+  font-size: 14px;
+  text-align: left;
+  color: rgba(85, 3, 3, 0.576);
   background-size: contain;
 }
 
@@ -72,22 +97,6 @@ h2 {
 .story-card-container {
   padding: 4px 42px;
   background-color: rgb(243, 242, 237);
-}
-
-h3 {
-  /* Use for story card titles */
-  font-size: 24px;
-  text-align: left;
-  color: #0d0d0d;
-  background-size: contain;
-  margin:0;
-}
-
-p {
-  font-size: 14px;
-  text-align: left;
-  color: rgba(85, 3, 3, 0.576);
-  background-size: contain;
 }
 
 .cards-wrapper {
@@ -120,20 +129,6 @@ button {
 
 a:hover p {
   color: rgb(10, 104, 34);
-}
-
-.resume-headers {
-  font-size: 30px;
-  text-align: left;
-  color: #02163ee9;
-}
-
-.p-playground {
-  font-size: 18px;
-  font-weigh: bold;
-  text-align: left;
-  color: black;
-  background-size: contain;
 }
 
 .responsive-img {
@@ -171,9 +166,6 @@ a:hover p {
 /* Defining styles for smaller screens */
 
 @media (max-width: 768px) {
-  .aboutme-div {
-    padding: 70px 0;
-  }
   .responsive-wrapper {
     flex-direction: column-reverse;
   }
@@ -191,110 +183,8 @@ a:hover p {
   .hw-responsive-wrapper{
     flex-direction: column;
   }
-  .three-dabbas{
-    flex-direction: column;
-  }
   h1{
-    font-size: 5rem;
+    font-size: 40px;
   }
-}
-ul{
-  display: flex;
-  flex-direction:column;
-  justify-content: center;
-  margin-top:0;
-  padding-left:0;
-}
-ul li {
-  text-decoration:none;
-  color:#000;
-  background:#ffc;
-  display:block;
-  /* height:18em; */
-  /* width:18em; */
-  padding:2em;
-  box-shadow:10px 10px 7px rgba(0,0,0,.7);
-  max-width:500px;
-  margin:1.5em;
-  transform: rotate(-6deg);
-}
-
-ul li:nth-child(odd) {
-  transform:rotate(4deg);
-  position:relative;
-  top:5px;
-}
-ul li:nth-child(1n) {
-  transform:rotate(-3deg);
-  position:relative;
-  top:-5px;
-}
-ul li:nth-child(3n) {
-  transform:rotate(5deg);
-  position:relative;
-  top:-10px;
-}
-ul li 
-  {
-  box-shadow:10px 10px 7px rgba(0,0,0,.7);
-  transform: scale(1.25);
-  position:relative;
-  z-index:5;
-} 
-ul li:nth-child(3n){
-  position:relative;
-  top:5px;
-  background:#cfc;
-}
-ul li:nth-child(3n+1){
-  position:relative;
-  top:-5px;
-  background:#ccf;
-}
-ul li:nth-child(3n+2){
-  position:relative;
-  top:-5px;
-  background:rgb(252, 240, 173);
-}
-.reading-list{
-  border:#000 3px ridge;
-  width:100%;
-  background-color: rgb(255, 234, 77);
-    height: 900px;
-    background: linear-gradient(#fafafa, transparent 25px, #9cdfda 28px);
-    background-size: 30px 30px;
-}
-.reading-list-inside{
-  margin-top: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
-}
-.three-dabbas{
-  display:flex;
-  gap:50px;
-}
-.sticky-notes {
-  /* max-width:90vw; */
-  display:flex;
-  flex-direction: column;
-  flex-wrap:wrap;
-  align-items:center;
-}
-
-#update {
-  margin: auto;
-  display:grid;
-  font-size: 15px;
-}
-.reading-list-p-font{
-  font-size: 22px;
-  color: black;
-  font-weight: bold;
-}
-
-
-li::marker{
-  color:#a40000;
-  font-weight:bold;
-  font-size:150%;
+  .right-nav {position: relative;}
 }
