--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,8 @@ body {
       transparent 0.001px
     ),
     linear-gradient(to bottom, #e5e7e9 0.8px, transparent 0.001px); */
-    background-image: linear-gradient(to right  bottom, #ff0091, #ff336e, #ff5e4e, #ff852f, #ffa813, #ffac0e, #ffb007, #ffb400, #ff9b00, #ff7f00, #ff6000, #ff380a);
+    /* background-image: linear-gradient(to right  bottom, #ff0091, #ff336e, #ff5e4e, #ff852f, #ffa813, #ffac0e, #ffb007, #ffb400, #ff9b00, #ff7f00, #ff6000, #ff380a); */
+    background-image: linear-gradient(to left bottom, #ffcc00, #ffaa00, #ff8500, #ff5900, #ff0000);
   padding: 40px 100px 100px 100px;
   margin: 0 auto;
   font-family: "Space Mono", monospace;
@@ -45,6 +46,10 @@ body {
 .right-nav {
   float: right;
   padding: 10px 8px;
+}
+
+nav a {
+  color:#000;
 }
 
 /* All the fonts! */
