--- a/stylesheet.css
+++ b/stylesheet.css
@@ -156,6 +156,16 @@ a:hover p {
   margin-bottom: 20px;
 }
 
+.story-div {
+  margin-left:100px;
+  margin-right:100px;
+  margin-bottom:60px;
+}
+
+.flourish-embed{
+  size: 50px;
+}
+
 /* Defining styles for smaller screens */
 
 @media (max-width: 768px) {
