--- a/stories/vaccines/vaccines-stylesheet.css
+++ b/stories/vaccines/vaccines-stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(181, 224, 255, 0.98);
 }
 
 h2 {
@@ -40,9 +40,4 @@ p {
     margin-left: 40px;
     margin-right: 40px;
     margin-bottom: 40px;
-}
-
-.timeline-div{
-    margin-left: 100px;
-    margin-right: 100px;
 }
