--- a/stories/vaccines/vaccines-stylesheet.css
+++ b/stories/vaccines/vaccines-stylesheet.css
@@ -20,7 +20,7 @@ p {
 }
 
 .dates{
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 30px;
 }
 
@@ -39,11 +39,11 @@ p {
 
 .second-scroll {
     text-align: left;
-    max-width: 1500px;
+    max-width: 1000px;
     margin:0 auto;
 }
 
 .third-scroll{
-    max-width: 1500px;
+    max-width: 1000px;
     margin:0 auto;
 }
