--- a/stories/r-place/stylesheet.css
+++ b/stories/r-place/stylesheet.css
@@ -1,6 +1,19 @@
-body{
+body {
     background-color: rgb(253, 253, 253);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Karla', sans-serif;
+    margin: 0
+}
+
+.main-image {
+    width: 100%;
+    height: 70vh;
+    margin-bottom: 20px;
+    object-fit: cover
+}
+
+.main-content {
+    max-width: 650px;
+    margin: 0 auto;
 }
 
 h1 {
@@ -11,6 +24,7 @@ p {
     font-size: 18px;
     line-height: 25px;
 }
+
 h2 {
     /* for quotes */
     font-size: 20px;
@@ -29,8 +43,15 @@ figcaption {
     padding-left: 210px;
 }
 
-div {
-    padding-left: 300px;
-    padding-right: 300px;
-    /* padding-top: 100px; */
+.final-image {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 20px;
+    object-fit: cover
+}
+
+.final-image img {
+    width: 80vw;
+    height: auto;
 }
