--- a/stories/street-flooding/stylesheet.css
+++ b/stories/street-flooding/stylesheet.css
@@ -16,6 +16,18 @@ body {
     margin: 0 auto;
 }
 
+.main-title {
+    position: absolute;
+    color: aliceblue;
+    font-size: 3.5rem;
+    bottom: 80px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    padding-bottom: 50px;
+    max-width: 700px;
+}
+
 h1 {
     font-size: 45px;
 }
