--- a/stories/stories-styles.css
+++ b/stories/stories-styles.css
@@ -16,6 +16,7 @@ body {
     margin: 0 auto;
     text-align: left;
     align-items: left;
+    padding: 0 20px;
 }
 
 h1 {
@@ -24,7 +25,6 @@ h1 {
 
 p {
     font-size: 18px;
-    line-height: 25px;
 }
 
 h2 {
@@ -74,39 +74,17 @@ figcaption {
     font-size: 75px;
     text-align: left;
     bottom: 80px;
-    left: 26px;
-    text-shadow: 2px 4px #000000;
-    /* margin-left: 40px; */
-}
-
-.main-title {
-    position: absolute;
-    color: aliceblue;
-    font-size: 3.8rem;
-    bottom: 80px;
     left: 0;
     right: 0;
     margin: 0 auto;
-    padding-bottom: 50px;
-    max-width: 700px;
-    text-align: left;
+    max-width: 850px;
+    text-shadow: 2px 4px #3a3a3a;
+    /* background-color: #3a3a3a; */
 }
 
-/* .div-figure {
-    align-items: center;
-    padding-right: -10px;
-    padding-left: 210px;
+@media (max-width: 768px) {
+    .bottom-left-text-salaries {
+        font-size: 40px;
+        top: 150px;
+    }
 }
-
-.final-image-rplace {
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
-    margin-bottom: 20px;
-    object-fit: cover
-}
-
-.final-image img {
-    width: 80vw;
-    height: auto;
-} */
