Added senate page

--- a/stories/stories-styles.css
+++ b/stories/stories-styles.css
@@ -68,7 +68,7 @@ figcaption {
     text-shadow: 2px 4px #3a3a3a;
 }
 
-.bottom-left-text-salaries {
+.bottom-left-text {
     position: absolute;
     color: aliceblue;
     font-size: 65px;
