--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -27,11 +27,8 @@ nav a:hover {
 }
 
 .social-media-icons {
-    padding-right: 150px;
-    color: #343434;
-    width: auto;
-    margin: auto;
-    align-items: center;
+    display: flex;
+    column-gap: 25px;
 }
 
 .cards-wrapper {
