--- a/stylesheets/aboutme-stylesheet.css
+++ b/stylesheets/aboutme-stylesheet.css
@@ -19,10 +19,11 @@
   }
   
   .responsive-img {
-    max-width: 25%;
-    width: auto;
-    height: auto;
-    /* float: right; */
+      width: 120;
+      height: 100;
+      float: right;
+      margin-left: 40px;
+      margin-bottom: 20px;
   }
   
   .responsive-wrapper-aboutme {
