FIXED THE PAGE THAT WAS KEEPING ME AWAKE

--- a/nyc-energy/game-style.css
+++ b/nyc-energy/game-style.css
@@ -3,8 +3,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     font-weight: lighter;
-    background: white;
-    /* overflow: hidden; */
+    background: #fcf8eb;
 }
 
 body.switched {
@@ -54,7 +53,7 @@ h2 {
     position: fixed;
     display: block;
     width: 100%;
-    background: white;
+    background: #fcf8eb;
     transition: color 0.6s, background 0.6s;
     margin: 0;
     padding-top: 6px;
@@ -67,7 +66,6 @@ h2 {
   Enables <iframe> support work on itch.io when using mobile iOS
 */
 .outerContainer {
-    /* position: absolute; */
     display: block;
     margin: 0;
     padding: 0;
@@ -97,7 +95,7 @@ h2 {
     margin: 0 auto;
     padding: 20px;
     padding-top: 4em;
-    background: white;
+    background: #fcf8eb;
 }
 
 .switched .container {
