--- a/climate-essay/essay-stylesheet.css
+++ b/climate-essay/essay-stylesheet.css
@@ -6,16 +6,16 @@ body {
 }
 
 .img-1 {
-    width: 300;
-    height: 350;
+    width: 250px;
+    height: auto;
     float: left;
     margin-right: 40px;
     margin-bottom: 10px;
 }
 
 .img-2 {
-    width: 420;
-    height: 300;
+    width: 420px;
+    height: auto;
     float: right;
     margin-left: 40px;
     margin-bottom: 20px;
@@ -23,12 +23,8 @@ body {
 
 /* RESPONSIVENESS RULES */
 @media (max-width: 768px) {
-    .responsive-wrapper {
-        flex-direction: column-reverse;
-    }
-
     body {
-        padding: 40px 20px 20px 20px;
+        padding: 40px;
     }
 
     h2 {
@@ -40,21 +36,17 @@ body {
     }
 
     .img-1 {
-        max-width: 25%;
+        width: 40%;
     }
 
     .img-2 {
-        max-width: 25%;
+        width: 55%;
     }
 }
 
 @media (max-width: 450px) {
-    .responsive-wrapper {
-        flex-direction: column-reverse;
-    }
-
     body {
-        padding: 10px 10px 10px 10px;
+        padding: 10px;
     }
 
     h2 {
@@ -66,36 +58,10 @@ body {
     }
 
     .img-1 {
-        max-width: 25%;
+        width: 100%;
     }
 
     .img-2 {
-        max-width: 25%;
-    }
-}
-
-@media (max-width: 550px) {
-    .responsive-wrapper {
-        flex-direction: column-reverse;
-    }
-
-    body {
-        padding: 10px 10px 10px 10px;
-    }
-
-    h2 {
-        font-size: 24px;
-    }
-
-    p {
-        font-size: 20px;
-    }
-
-    .img-1 {
-        max-width: 25%;
-    }
-
-    .img-2 {
-        max-width: 25%;
+        width: 100%;
     }
 }
