I AM THE SMARTEST COOKIE in the cookie jar. I just debugged something :)))

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -21,6 +21,11 @@ nav a:hover {
     color: #ea624e;
 }
 
+.center-content-index {
+    max-width: 1050px;
+    margin: 0 auto;
+}
+
 .center-content {
     max-width: 850px;
     margin: 0 auto;
