--- a/nyc-energy/game-style.css
+++ b/nyc-energy/game-style.css
@@ -190,7 +190,7 @@ img {
     right: 14px;
     top: 4px;
     user-select: none;
-    background: white;
+    background: #fcf8eb;
     transition: color 0.6s, background 0.6s;
 }
 
