--- a/street-flooding/street-stylesheet.css
+++ b/street-flooding/street-stylesheet.css
@@ -6,15 +6,15 @@ body {
 }
 
 .hero-image {
-    width:100vw; 
-    height:90vh;
+    width: 100vw;
+    height: 90vh;
     margin-right: -200px;
     margin-left: -200px;
     margin-top: -80px;
     margin-bottom: 10px;
-    max-width: 100vw; 
+    max-width: 100vw;
     object-fit: cover;
-}   
+}
 
 .text-on-image {
     position: absolute;
@@ -25,13 +25,14 @@ body {
     text-shadow: 2px 2px #343434;
 }
 
-.tweet-embed{
-    align-items: center;
+.tweet-embed {
+    display: flex;
+    justify-content: center;
 }
 
 .img-1 {
-    width: 380;
-    height: 500;
+    width: 380px;
+    height: 500px;
     float: right;
     margin-left: 40px;
     margin-bottom: 20px;
