--- a/mapping/election-map/styles.css
+++ b/mapping/election-map/styles.css
@@ -4,9 +4,15 @@ body {
 }
 
 #map {
-    width: 90%;
-    height: 600px;
-    margin: 5em auto;
+    width: 50%;
+    height: 500px;
+    margin: 2em auto;
+}
+
+#mapNew {
+    width: 50%;
+    height: 500px;
+    margin: 2em auto;
 }
 
 .mapboxgl-popup-content h4 {
