--- a/mapping/election-map/styles.css
+++ b/mapping/election-map/styles.css
@@ -15,11 +15,11 @@ body {
     margin: 2em auto;
 }
 
-.center-content-maps {
+/* .center-content-maps {
     max-width: 1450px;
     margin-top: 100px;
     margin-left: 50px;
-}
+} */
 
 /* p {
     /* font-size: 20px; */
