--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fcf8eb;
+    background-color: #ffff;
     font-family: 'Playfair Display', serif;
     padding: 40px 25px 100px 25px;
     margin: 0 auto;
