--- a/mapping/citibikes/styles.css
+++ b/mapping/citibikes/styles.css
@@ -48,3 +48,22 @@ body {
     margin-top: 0.3em;
     margin-bottom: 0em;
 }
+
+.title {
+	background-color: rgb(253, 241, 175);
+	opacity: 70%;
+	border-radius: 1em;
+	top: 5em;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	font: .8em/.9em 'Open Sans', sans-serif;
+	line-height: 2em;
+	padding: 5px 10px 5px 10px;
+	position: absolute;
+	max-width: 24%;
+	margin: 0em 2em;
+	z-index: 100;
+}
+
+.title p {
+    color:black;
+}
