--- a/mapping/mapping-styles.css
+++ b/mapping/mapping-styles.css
@@ -1,6 +1,6 @@
 body {
     /* background-image: linear-gradient(to right bottom, #079242, #00aa78, #00c0aa, #2cd5d7, #6fe8fc); */
-    background-color: black;
+    background-color: rgb(1, 16, 48);
 }
 
 h1 {
