--- a/stylesheets/aboutme-stylesheet.css
+++ b/stylesheets/aboutme-stylesheet.css
@@ -1,8 +1,8 @@
-.aboutme-div {
+/* .aboutme-div {
     padding: 70px;
     margin: 0;
   }
-  
+   */
   .aboutme-buttons {
     background-color: #000000;
     border: none;
