--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,5 +1,6 @@
 body {
     background-color: #ffff;
+    /* font-family:'Roboto Mono', monospace; */
     font-family: 'Playfair Display', serif;
     padding: 40px 25px 100px 25px;
     margin: 0 auto;
@@ -79,7 +80,7 @@ p {
 }
 
 a p {
-    color: #ea624e;
+    /* color: #ea624e; */
     font-size: 16px;
     text-decoration: none;
 }
@@ -90,7 +91,7 @@ a p:hover {
 
 a {
     text-decoration: none;
-    color: #ea624e;
+    color: #000000;
     font-size: 18px;
 }
 
