--- a/mapping/forest-cover/styles.css
+++ b/mapping/forest-cover/styles.css
@@ -15,3 +15,22 @@ body {
     margin: 5em auto;
 }
 
+.hero-image {
+    width: 120vw;
+    height: 100vh;
+    margin-right: -10px;
+    margin-left: -25px;
+    margin-top: -80px;
+    margin-bottom: 10px;
+    max-width: 100vw;
+    object-fit: cover;
+}
+
+.text-on-image {
+    position: absolute;
+    color: #fcf8eb;
+    font-size: 78px;
+    bottom: 200px;
+    left: 60px;
+    text-shadow: 2px 2px #343434;
+}
