--- a/mapping/forest-cover/styles.css
+++ b/mapping/forest-cover/styles.css
@@ -3,11 +3,11 @@ body {
     padding: 0;
 }
 
-/* #map-1990 {
+#map-1990 {
     width: 60%;
     height: 550px;
     margin: 2em auto;
-} */
+}
 
 #map-2020 {
     width: 60%;
