--- a/mapping/tennessee-fires/style.css
+++ b/mapping/tennessee-fires/style.css
@@ -23,7 +23,7 @@ p {
     font-size: 0.9em;
     border-width: 0px 0px 0.5px 0px;
     border-style: solid;
-    border-color: rgb(80, 80, 80);
+    border-color: #000000;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
